--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 streamlit==1.28.2
 langchain==0.0.338
 langchain-community==0.0.13
-faiss-cpu==1.7.4
+faiss-cpu==1.7.4; platform_system != "Linux"
+# Pre-built FAISS for Linux
+pypi-faiss==0.0.11; platform_system == "Linux"
+# For embedding models
 sentence-transformers==2.2.2
 transformers==4.35.2
 huggingface-hub==0.19.4
+# Add gdown to download the vectorstore if needed
+gdown==4.7.1
