--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ chromadb==0.4.22
 sentence-transformers==2.2.2
 transformers==4.35.2
 huggingface-hub==0.19.4
+pydantic<2.0.0
+onnxruntime
+numpy>=1.22.0
+fastapi
+uvicorn[standard]
