--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pip install streamlit==1.28.2
-pip install langchain==0.0.338
-pip install langchain-huggingface==0.0.6
-pip install huggingface-hub>=0.19.0
-pip install chromadb>=0.4.18
+streamlit==1.28.2
+langchain==0.0.338
+langchain-huggingface==0.0.6
+huggingface-hub>=0.19.0
+chromadb>=0.4.18
