--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.28.2
-langchain>=0.1.0
-langchain-huggingface==0.1.2
+langchain>=0.3.0
+langchain-huggingface>=0.1.2
 huggingface-hub>=0.19.0
 chromadb>=0.4.18
+sentence-transformers>=2.6.0
