--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.28.2
 langchain>=0.3.0
 langchain-huggingface>=0.1.2
+langchain-community>=0.0.1
 huggingface-hub>=0.19.0
 chromadb>=0.4.18
 sentence-transformers>=2.6.0
