--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ langchain-huggingface>=0.1.2
 langchain-community>=0.0.1
 langchain-text-splitters>=0.0.1
 huggingface-hub>=0.19.0
-chromadb>=0.4.18
 sentence-transformers>=2.6.0
+faiss-cpu>=1.7.4
