--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ langchain==0.1.0
 langchain-openai==0.0.5
 langchain-huggingface==0.0.1
 langchain-community==0.0.10
-openai==1.6.0
+openai>=1.10.0,<2.0.0
 faiss-cpu==1.7.4
 protobuf==4.24.4
 pydantic==2.5.2
