--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ python-dotenv==1.0.0
 xmltodict==0.13.0
 beautifulsoup4==4.12.2
 chromadb==0.4.18
-sentence-transformers==2.2.2
+sentence-transformers>=2.6.0
 huggingface-hub>=0.23.0
 
