--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.31.0
-langchain==0.1.0
-langchain-openai==0.0.5
-langchain-huggingface==0.0.1
-langchain-community==0.0.10
+langchain==0.0.354
+langchain-openai==0.0.2
+langchain-huggingface==0.0.0
+langchain-community==0.0.8
 openai>=1.6.0,<2.0.0
 faiss-cpu==1.7.4
 protobuf==4.24.4
@@ -13,6 +13,7 @@ python-dotenv==1.0.0
 xmltodict==0.13.0
 beautifulsoup4==4.12.2
 chromadb==0.4.18
-sentence-transformers>=2.6.0
-huggingface-hub>=0.23.0
+sentence-transformers==2.2.2
+huggingface-hub==0.20.2
+
 
