--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-streamlit==1.31.0
-langchain-community==0.0.10
-langchain-openai==0.0.2
-openai>=1.6.0,<2.0.0
-faiss-cpu
-protobuf==4.24.4
-pydantic==2.5.2
-numpy==1.26.2
-pandas==2.1.3
-python-dotenv==1.0.0
-xmltodict==0.13.0
-beautifulsoup4==4.12.2
-chromadb==0.4.18
-sentence-transformers==2.2.2
-huggingface-hub==0.20.2
-
+streamlit==1.28.2
+langchain>=0.3.0
+langchain-huggingface>=0.1.2
+langchain-community>=0.0.1
+langchain-text-splitters>=0.0.1
+huggingface-hub>=0.19.0
+sentence-transformers>=2.6.0
+faiss-cpu>=1.7.4
+langchain-openai>=0.0.2
