--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ huggingface-hub>=0.19.0
 sentence-transformers>=2.6.0
 faiss-cpu>=1.7.4
 langchain-openai>=0.0.2
+torch==2.0.1
+torchvision==0.15.2
+transformers==4.30.2
