--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.28.2
 langchain>=0.3.0
-langchain-huggingface==0.1.1
 langchain-community>=0.0.1
 langchain-text-splitters>=0.0.1
 huggingface-hub>=0.19.0
@@ -9,5 +8,6 @@ faiss-cpu>=1.7.4
 langchain-openai>=0.0.2
 torch==2.2.0
 torchvision==0.17.0
-transformers==4.35.0
-tokenizers==0.15.0
+transformers>=4.35.0
+tokenizers>=0.19.1
+langchain-huggingface==0.1.1
