--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 streamlit==1.28.2
-langchain>=0.3.0
-langchain-community>=0.0.1
-langchain-text-splitters>=0.0.1
-huggingface-hub>=0.19.0
-faiss-cpu>=1.7.4
-langchain-openai>=0.0.2
-torch==2.2.0
-torchvision==0.17.0
-transformers>=4.35.0
-tokenizers>=0.19.1
-sentence-transformers
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-text-splitters==0.2.4
+langchain-openai==0.1.23
+huggingface-hub==0.24.7
+transformers==4.44.2
+tokenizers==0.19.1
+sentence-transformers==3.0.1
+torch==2.4.1
+torchvision==0.19.1
+torchaudio==2.4.1
+faiss-cpu==1.8.0
+numpy==1.24.4
+scipy==1.11.4
+scikit-learn==1.3.2
+pandas==2.0.3
+pillow==10.0.1
