--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,35 @@
+# Core Streamlit and dependencies
 streamlit==1.28.2
-langchain==0.2.16
-langchain-community==0.2.16
-langchain-text-splitters==0.2.4
-langchain-openai==0.1.23
-huggingface-hub==0.24.7
-transformers==4.44.2
-tokenizers==0.19.1
-sentence-transformers==3.0.1
-torch==2.4.1
-torchvision==0.19.1
-torchaudio==2.4.1
-faiss-cpu==1.8.0
+rich>=10.14.0,<14.0.0
+
+# LangChain ecosystem - compatible versions
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-text-splitters==0.0.1
+langchain-openai==0.1.8
+
+# Hugging Face ecosystem
+huggingface-hub==0.20.3
+transformers==4.36.2
+tokenizers==0.15.0
+sentence-transformers==2.2.2
+
+# PyTorch ecosystem - stable versions
+torch==2.1.2
+torchvision==0.16.2
+torchaudio==2.1.2
+
+# Vector database and ML
+faiss-cpu==1.7.4
 numpy==1.24.4
 scipy==1.11.4
 scikit-learn==1.3.2
+
+# Data handling
 pandas==2.0.3
 pillow==10.0.1
+
+# Additional dependencies that might be needed
+packaging>=20.0
+typing-extensions>=4.0.0
+pydantic>=1.10.0,<3.0.0
