--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-streamlit==1.28.2
-langchain>=0.3.0
-langchain-community>=0.0.1
-langchain-text-splitters>=0.0.1
-huggingface-hub>=0.19.0
-sentence-transformers>=2.6.0
-faiss-cpu>=1.7.4
-langchain-openai>=0.0.2
-torch==2.2.0
-torchvision==0.17.0
-transformers>=4.35.0
+streamlit==1.45.0
+langchain==0.2.5
+langchain-core==0.3.61
+langchain-community==0.3.24
+langchain-text-splitters==0.3.8
+huggingface-hub>=0.32.0
+sentence-transformers==4.1.0
+faiss-cpu==1.11.0
+langchain-openai==0.3.18
+torch==2.3.0 # Key change: Upgraded from 2.2.0. Add +cuXXX (e.g., +cu118 or +cu121) if CUDA is needed.
+torchvision==0.18.0 # Compatible with torch 2.3.0
+torchaudio==2.3.0 # Compatible with torch 2.3.0
+transformers==4.52.3 # Updated to a recent stable version
 tokenizers>=0.19.1
-langchain-huggingface==0.1.1
+langchain-huggingface==0.2.0
+
