--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 streamlit==1.28.2
-langchain>=0.3.0
-langchain-community>=0.0.1
-langchain-text-splitters>=0.0.1
-huggingface-hub>=0.19.0
-sentence-transformers>=2.6.0
-faiss-cpu>=1.7.4
-langchain-openai>=0.0.2
-torch==2.2.0
-torchvision==0.17.0
-transformers>=4.35.0
-tokenizers>=0.19.1
-langchain-huggingface==0.1.1
-
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-text-splitters==0.3.2
+langchain-huggingface==0.1.2
+langchain-openai==0.2.8
+huggingface-hub==0.26.2
+sentence-transformers==3.2.1
+faiss-cpu==1.8.0
+torch==2.4.1
+torchvision==0.19.1
+transformers==4.46.3
+tokenizers==0.20.3
+accelerate==1.1.1
+safetensors==0.4.5
+numpy<2.0.0
+datasets==3.1.0
